<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event_details"
    android:background="#D7D7D7">

    <ImageView
        android:id="@+id/imageView_poster"
        android:layout_width="253dp"
        android:layout_height="374dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Organizer"
        app:srcCompat="@drawable/mhbanner" />

    <ImageView
        android:id="@+id/imageView_org"
        android:layout_width="80dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/org"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/csi_logo" />

    <TextView
        android:id="@+id/textView_Event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:paddingRight="10dp"
        android:text="@string/event_name"
        android:textColor="#231F20"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_org"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/organized_by"
        app:layout_constraintStart_toStartOf="@+id/textView_Event"
        app:layout_constraintTop_toBottomOf="@+id/textView_Event" />

    <TextView
        android:id="@+id/textView_EventDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:text="@string/event_desc"
        android:textColor="#231F20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster" />
</androidx.constraintlayout.widget.ConstraintLayout>