<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D7D7"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_LoginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_LoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_LoginName"
        app:layout_constraintTop_toBottomOf="@+id/editText_LoginName" />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_selector"
        android:elevation="20dp"
        android:onClick="checkLogin"
        android:text="@string/login"
        android:textColor="#113977"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_LoginPassword" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="166dp"
        android:layout_height="172dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_filter_foreground" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/register"
        android:textColor="#113977"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>