<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".leave_application">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:itemBackground="@color/main"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu__navigation" />

    <EditText
        android:id="@+id/select_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_txt"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:padding="5dp"
        android:text="@string/start_date"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/select_start"
        app:layout_constraintEnd_toStartOf="@+id/select_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select_start" />

    <TextView
        android:id="@+id/end_txt"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:padding="5dp"
        android:text="@string/end_date"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/select_end"
        app:layout_constraintEnd_toStartOf="@+id/select_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_txt"
        app:layout_constraintTop_toTopOf="@+id/select_end"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/select_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/select_start"
        app:layout_constraintTop_toBottomOf="@+id/select_start" />

    <TextView
        android:id="@+id/reason_txt"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:padding="5dp"
        android:text="@string/reason"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/end_txt"
        app:layout_constraintStart_toStartOf="@+id/end_txt"
        app:layout_constraintTop_toBottomOf="@+id/end_txt" />

    <EditText
        android:id="@+id/state_reason"
        android:layout_width="353dp"
        android:layout_height="177dp"
        android:layout_marginTop="24dp"
        android:background="#46C1C1C5"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/reason_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/select_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/reason_txt"
        app:layout_constraintTop_toBottomOf="@+id/reason_txt" />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/main"
        android:text="@string/upload_file"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_reason" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/main"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_btn"
        app:layout_constraintVertical_bias="0.313" />

</androidx.constraintlayout.widget.ConstraintLayout>